--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mini-css-extract-plugin": "0.5.0",
     "node-sass": "4.9.3",
     "regenerator-runtime": "0.10.3",
+    "resolve-url-loader": "3.0.1",
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "webpack": "4.28.4",
